--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="favicon.png" rel="icon">
     <title>Banco Solar</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
 
     <style>
@@ -121,11 +124,14 @@
             </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     <script src="https://momentjs.com/downloads/moment.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
 
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog text-dark" role="document">
@@ -170,6 +176,11 @@
                     }
                 );
                 $("#exampleModal").modal("hide");
+
+                if (response.status == 400) {
+                    toastr.error(data.mensaje)
+                    return
+                }
                 location.reload();
             } catch (e) {
                 alert("Algo salió mal..." + e);
@@ -180,16 +191,26 @@
             e.preventDefault();
             let nombre = $("form:first input:first").val();
             let balance = Number($("form:first input:nth-child(2)").val());
+            let response;
             try {
-                const response = await fetch("http://localhost:3000/usuario", {
+                response = await fetch("http://localhost:3000/usuario", {
+
                     method: "post",
                     body: JSON.stringify({
                         nombre,
                         balance,
                     }),
+
                 });
+
+                const data = await response.json()
+                if (response.status == 400) {
+                    toastr.error(data.mensaje)
+                    return
+                }
                 $("form:first input:first").val("");
                 $("form:first input:nth-child(2)").val("");
+
                 location.reload();
             } catch (e) {
                 alert("Algo salió mal ..." + e);
@@ -225,8 +246,8 @@
         const getUsuarios = async() => {
             const response = await fetch("http://localhost:3000/usuarios");
             let data = await response.json();
-            $(".usuarios").html("");
 
+            $(".usuarios").html("");
             $.each(data, (i, c) => {
                 $(".usuarios").append(`
               <tr>
@@ -255,6 +276,7 @@
                 method: "DELETE",
             });
             getUsuarios();
+            getTransferencias();
         };
 
         const getTransferencias = async() => {
@@ -273,6 +295,7 @@
        </tr>
      `);
             });
+
         };
 
         getUsuarios();
